--- a/readthedocsext/theme/templates/account/email.html
+++ b/readthedocsext/theme/templates/account/email.html
@@ -2,32 +2,47 @@
 
 {% load i18n %}
 
-{% block title %}{% trans "Change Email" %}{% endblock %}
+{% block title %}{% trans "Email Addresses" %}{% endblock %}
 
 {% block profile-admin-change-email %}active{% endblock %}
 
-{% block edit_content_header %} {% trans "Change Email" %} {% endblock %}
+{% block edit_content_header %} {% trans "Email Addresses" %} {% endblock %}
 
 {% block edit_content %}
-  {% if user.emailaddress_set.all %}
-    <p>{% trans "The following email addresses are associated with your account:" %}</p>
 
-    <form action="{% url 'account_email' %}" class="ui form" method="post">
-      {% csrf_token %}
-      <fieldset class="ui segment">
+  <div class="ui top attached menu right aligned">
+    <div class="right item">
+      <div class="ui primary button">Add email address</div>
+    </div>
+  </div>
+
+  {% if not user.emailaddress_set.all %}
+    <div class="ui placeholder attached segment">
+      <div class="ui icon header">
+        <i class="exclamation triangle icon"></i>
+        No email addresses are configured
+      </div>
+      <div class="ui inline center aligned">
+        {% trans "Email addresses are required receive notifications and reset your password." %}</p>
+        <div class="ui primary button">Add Document</div>
+      </div>
+    </div>
+  {% else %}
+    <div class ="ui attached segment">
+      <form action="{% url 'account_email' %}" class="ui form" method="post">
+        {% csrf_token %}
 
         {% for emailaddress in user.emailaddress_set.all %}
           <div class="field">
-            <label for="email_radio_{{ forloop.counter }}" class="{% if emailaddress.primary %}primary_email{%endif%}">
-              <input id="email_radio_{{ forloop.counter }}" type="radio" name="email" {% if emailaddress.primary %}checked="checked"{%endif %} value="{{ emailaddress.email }}"/>
+            <input id="email_radio_{{ forloop.counter }}" type="radio" name="email" {% if emailaddress.primary %}checked="checked"{%endif %} value="{{ emailaddress.email }}"/>
 
               {{ emailaddress.email }}
                 {% if emailaddress.verified %}
-                  <span class="ui positive message">{% trans "Verified" %}</span>
+                  <span class="ui green label">{% trans "Verified" %}</span>
                 {% else %}
-                  <span class="ui message">{% trans "Unverified" %}</span>
+                  <span class="ui label">{% trans "Unverified" %}</span>
                 {% endif %}
-                {% if emailaddress.primary %}<span>{% trans "Primary" %}</span>{% endif %}
+                {% if emailaddress.primary %}<span class="ui primary label">{% trans "Primary" %}</span>{% endif %}
             </label>
           </div>
         {% endfor %}
@@ -38,13 +53,8 @@
           <button class="ui button" type="submit" name="action_remove" >{% trans "Remove" %}</button>
         </div>
 
-      </fieldset>
-    </form>
-
-  {% else %}
-
-  <p><strong>{% trans "Warning:" %}</strong>{% trans "You currently do not have any email address set up. You should really add an email address so you can receive notifications, reset your password, etc." %}</p>
-
+      </form>
+    </div>
   {% endif %}
 
   <h2>{% trans "Add E-mail Address" %}</h2>
