--- a/readthedocsext/theme/templates/account/password_change.html
+++ b/readthedocsext/theme/templates/account/password_change.html
@@ -2,16 +2,21 @@
 
 {% load i18n %}
 
+
+
 {% block title %}{% trans "Change Password" %}{% endblock %}
 
 {% block profile-admin-change-password %}active{% endblock %}
 
-{% block edit_content_header %} {% trans "Change Password" %} {% endblock %}
+{% block edit_content_header %}{% trans "Change Password" %}{% endblock %}
 
 {% block edit_content %}
-    <form method="POST" action=".">{% csrf_token %}
-        {{ form.as_p }}
-        <input class="ui primary button" type="submit" name="submit" value="{% trans "Change Password" %}" id="submit"/>
-    </form>
-
+  <div class="ui two column grid">
+    <div class="ui ten wide column">
+      <form method="POST" action="." class="ui form">
+        {% csrf_token %}
+        {% include "includes/forms/semanticui.html" with form=form submit_text=action %}
+      </form>
+    </div>
+  </div>
 {% endblock %}
