--- a/readthedocsext/theme/templates/core/project_details.html
+++ b/readthedocsext/theme/templates/core/project_details.html
@@ -4,44 +4,99 @@
 {% load gravatar %}
 {% load projects_tags %}
 
-<div class="ui basic segment very padded">
+<div class="ui basic segment">
   <div class="ui grid stackable">
+
+    <div class="four wide column">
+      <div class="ui vertical fluid menu">
+        <a class="active green item">
+          Overview
+        </a>
+        <a class="item">
+          Builds
+        </a>
+        <a class="item">
+          Admin
+        </a>
+      </div>
+    </div>
 
     <div class="twelve wide column">
       {% if onboard %}
-      <!-- BEGIN onboard -->
-        {% include 'projects/onboard_detail.html' %}
-      <!-- END onboard -->
+        <!-- BEGIN onboard -->
+          {% include 'projects/onboard_detail.html' %}
+        <!-- END onboard -->
       {% endif %}
-      <h3>{% trans "Versions" %}</h3>
 
+      <h3 class="ui heading">{% trans "Versions" %}</h3>
 
-      <div class="ui items divided">
+<div class="ui top attached menu">
+  <div class="item">
+    <i class="wrench icon"></i>
+  </div>
+  <div class="right menu">
+    <div class="ui right aligned category search item">
+      <div class="ui transparent icon input">
+        <input class="prompt" type="text" placeholder="Search versions...">
+        <i class="search link icon"></i>
+      </div>
+      <div class="results"></div>
+    </div>
+  </div>
+</div>
+<div class="ui bottom attached segment">
+
+      <div class="ui middle aligned very relaxed divided list">
         {% for version in versions|sort_version_aware %}
-            <div class="item">
-              <div class="content">
-              {% if version.uploaded or version.built %}
-              {# Link to the docs #}
-                <a class="header" href="{{ version.get_absolute_url }}">
-                  {{ version.slug }}
-                </a>
-                {% if request.user in project.users.all %}
-                  <div class="meta">
-                    <span>{{ version.get_privacy_level_display }}</span>
-                  </div>
-                {% endif %}
-                {% else %}
-                  <a class="header" href="{{ version.project.get_builds_url }}">
-                    {{ version.slug }}
-                {% endif %}
-                </div>
+          <div class="item">
+            <div class="ui basic icon buttons right floated">
+
+              <div class="ui icon button" data-content="View version docs">
+                <i class="ellipsis horizontal icon"></i>
+              </div>
+
               {% if request.user|is_admin:project %}
-                <div class="extra">
-                  <a class="ui right floated button" href="{% url "project_version_detail" project.slug version.slug %}">{% trans "Edit" %}</a>
-                  </div> 
+                <a class="ui icon button" href="{% url "project_version_detail" project.slug version.slug %}" data-content="Configure version">
+                  <i class="wrench icon"></i>
+                </a>
+
+                <form method="post" class="ui form" action="{% url "projects_detail" project.slug %}">
+                  <input type="hidden" name="version_slug" value="{{ version.slug }}">
+                  <button class="ui icon button" data-content="Rebuild version">
+                    <i class="refresh icon"></i>
+                  </button>
+                </form>
+
               {% endif %}
             </div>
+            <div class="content">
+              <div class="header">
+                {{ version.slug }}
+
+                {% if request.user in project.users.all %}
+                  {% if version.privacy_level == 'private' %}
+                    <span class="ui horizontal label primary">private</span>
+                  {% endif %}
+                {% endif %}
+
+                {% if version.slug == project.default_version %}
+                  <span class="ui horizontal label primary">default</span>
+                {% endif %}
+              </div>
+
+              <div class="description">
+                Something
+
+                {% if version.uploaded or version.built %}
+                  <a class="header" href="{{ version.get_absolute_url }}"></a>
+                {% else %}
+                  <a class="header" href="{{ version.project.get_builds_url }}"></a>
+                {% endif %}
+              </div>
+            </div>
+          </div>
         {% empty %}
+          {% comment %}PLACEHOLDER THING!{% endcomment %}
           <div class="item">
             <div class="content">
               <span class="header">{% trans "No active versions." %}</span>
@@ -49,6 +104,9 @@
           </div>
         {% endfor %}
       </div>
+
+</div>
+
 
     {% block build_versions %}
     {% if versions and request.user|is_admin:project %}
