Add new build detail structure and styles
This fixes some of the issues with DOM speed and cleans up the styles of
the page a great deal.

--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -8,7 +8,10 @@
     <title>{% block title %}{% endblock %}{% block head_title %}{% endblock %} - Read the Docs</title>
 
     <link rel="icon" type="image/png" href="{% static 'corporate/img/favicon.png' %}" />
+    <!--
     <link rel="stylesheet" type="text/css" media="all" href="{% static 'readthedocsext/theme/css/site.css' %}" />
+    -->
+    <link rel="stylesheet" type="text/css" media="all" href="http://localhost:8080/static/css/site.css" />
     {% block extra_links %}{% endblock %}
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
