Add colorized ansi output handling

--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -257,7 +257,7 @@ readthedocs.site.build.detail.BuildDetailView.init({id: '{{ build.pk }}'});
                     <i class="linkify icon"></i>
                   </a>
                   <div class="content">
-                    <pre><code data-bind="text: output"></code></pre>
+                    <pre><code data-bind="html: output"></code></pre>
                   </div>
                 </div>
               </div>
